Add header section with logo and navigation

--- a/welcome/prettylittlething-welcome-email/index.html
+++ b/welcome/prettylittlething-welcome-email/index.html
@@ -64,7 +64,47 @@
     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fffdf7;">
         <tr>
             <td align="center">
-                <!-- Email content will go here -->
+                <!-- Header Section -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center" style="padding: 10px 0;">
+                            <!-- Logo -->
+                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td align="center" style="padding: 10px 0;">
+                                        <a href="#" style="text-decoration: none;">
+                                            <img src="images/logo.png" alt="PRETTYLITTLETHING" width="218" style="display: block; border: 0; height: auto; max-width: 218px;">
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                            
+                            <!-- Navigation Menu -->
+                            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" class="mobile-hide">
+                                <tr>
+                                    <td align="center" style="padding: 5px 0;">
+                                        <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+                                            <tr>
+                                                <td style="padding: 5px 25px;">
+                                                    <a href="#" style="color: #000000; text-decoration: none; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">NEW IN</a>
+                                                </td>
+                                                <td style="padding: 5px 25px;">
+                                                    <a href="#" style="color: #000000; text-decoration: none; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">CLOTHING</a>
+                                                </td>
+                                                <td style="padding: 5px 25px;">
+                                                    <a href="#" style="color: #000000; text-decoration: none; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">DRESSES</a>
+                                                </td>
+                                                <td style="padding: 5px 25px;">
+                                                    <a href="#" style="color: #000000; text-decoration: none; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">SALE</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
