Added promotional banner with discount code

--- a/welcome/prettylittlething-welcome-email/index.html
+++ b/welcome/prettylittlething-welcome-email/index.html
@@ -105,6 +105,17 @@
                         </td>
                     </tr>
                 </table>
+                
+                <!-- Promotional Banner -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center" style="background-color: #550503; padding: 10px;">
+                            <a href="#" style="color: #fffdf7; text-decoration: none; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">
+                                EXTRA 20% OFF EVERYTHING* CODE: W20X5XFEV
+                            </a>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
