--- a/welcome/prettylittlething-welcome-email/index.html
+++ b/welcome/prettylittlething-welcome-email/index.html
@@ -116,6 +116,34 @@
                         </td>
                     </tr>
                 </table>
+                
+                <!-- Main Hero Section -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center">
+                            <!-- Hero Image -->
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/welcome-hero.png" alt="WELCOME TO PRETTY LITTLE THING ALL THE GIRLS ARE HERE" width="600" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="padding: 35px 10px 10px 10px;">
+                            <!-- Welcome Message -->
+                            <p style="margin: 0; color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 14px; line-height: 1.2; text-align: center;">
+                                Sorry we're late, we just wanted to make sure your exclusive discount was extra special. an extra 20% off sale is waiting.
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="padding: 10px;">
+                            <!-- CTA Button -->
+                            <a href="#" style="background-color: #550503; border: 1px solid #000000; color: #ffffff; display: inline-block; font-family: Arial, Helvetica, sans-serif; font-size: 14px; padding: 0px 10px; text-align: center; text-decoration: none; width: 35%; line-height: 28px;">
+                                MORE THIS WAY
+                            </a>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
