Added app promotion and feature grid sections

--- a/welcome/prettylittlething-welcome-email/index.html
+++ b/welcome/prettylittlething-welcome-email/index.html
@@ -144,6 +144,47 @@
                         </td>
                     </tr>
                 </table>
+                
+                <!-- App Promotion Section -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center" style="padding: 5px 0;">
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/app-promo.png" alt="SEE YOU ON THE APP" width="600" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+                
+                <!-- Feature Grid Section -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <!-- Row 1: Newest Drops + Refer a Friend -->
+                    <tr>
+                        <td width="50%" style="padding: 4px;">
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/newest-drops.png" alt="NEWEST DROPS" width="100%" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                        <td width="50%" style="padding: 4px;">
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/refer-friend.png" alt="REFER A FRIEND" width="100%" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                    </tr>
+                    <!-- Row 2: Birthday + TikTok -->
+                    <tr>
+                        <td width="50%" style="padding: 4px;">
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/birthday.png" alt="TELL US YOUR BIRTHDAY" width="100%" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                        <td width="50%" style="padding: 4px;">
+                            <a href="#" style="text-decoration: none;">
+                                <img src="images/tiktok.png" alt="FOLLOW US ON TIK TOK" width="100%" style="display: block; border: 0; height: auto; max-width: 100%;">
+                            </a>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
