Added legal disclaimer and unsubscribe footer sections

--- a/welcome/prettylittlething-welcome-email/index.html
+++ b/welcome/prettylittlething-welcome-email/index.html
@@ -248,6 +248,28 @@
                         <td style="padding: 0; border-top: 1px solid #d0d0d0;"></td>
                     </tr>
                 </table>
+                
+                <!-- Promotional Disclaimer -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center" style="padding: 10px;">
+                            <p style="margin: 0; color: #cccccc; font-family: Arial, Helvetica, sans-serif; font-size: 10px; line-height: 1.2; text-align: center;">
+                                *EXTRA 20% OFF EVERYTHING. Use code:W20X5XFEV. Excludes PLT Ski, beauty purchases, Havaianas, Yankee, moon boots &amp; 50 collections. Valid until None &amp; cannot be used in conjunction with any other promotion or code. No price adjustments on previous purchases. PrettyLittlething reserve the right to cancel or alter any promotion.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                
+                <!-- Legal Footer & Unsubscribe -->
+                <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" class="container" style="max-width: 600px;">
+                    <tr>
+                        <td align="center" style="padding: 5px;">
+                            <p style="margin: 0; color: #cccccc; font-family: Arial, Helvetica, sans-serif; font-size: 11px; line-height: 1.2; text-align: center;">
+                                We are emailing after your request to receive our newsletter either when you have made a purchase online or subscribed at www.prettylittlething.us, we do not reply to e-mails from this address, for further assistance, please visit our contact page. If you want to know how we use customer data please view our <a href="#" style="text-decoration: underline; color: #cccccc;">Privacy Policy</a>. If you wish to end your email subscription, unsubscribe <a href="#" style="text-decoration: underline; color: #cccccc;">here</a>. Registered office: 49-51 Dale Street, Manchester, M1 2HF
+                            </p>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
     </table>
