--- a/welcome/janieandjack-welcome-email/index.html
+++ b/welcome/janieandjack-welcome-email/index.html
@@ -176,3 +176,42 @@
                         </td>
                     </tr>
                 </table>
+                
+                <!-- Discount Code Section -->
+                <table align="center" cellpadding="0" cellspacing="0" border="0" width="190" class="responsive-table" style="width: 190px;">
+                    <tr>
+                        <td align="center" style="font-size: 14px; line-height: 20px; font-family: Arial, sans-serif; color: #1b365d; padding: 30px 0 0; font-weight: 500; text-transform: uppercase;">
+                            use code:
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="font-size: 14px; line-height: 20px; font-family: Arial, sans-serif; color: #1b365d; padding: 0; font-weight: 500; text-transform: uppercase;">
+                            GCHKCNACCIWTHGLX
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 15px 0 0;" align="center">
+                            <img src="assets/fdc6e24c3af1bd5775b5cacfda8ffb4a663b414e.gif" style="display: block; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 13px; width: 190px; height: 55px;" width="190" height="55" border="0" alt="10% off discount" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="font-size: 12px; line-height: 20px; font-family: Arial, sans-serif; color: #1b365d; padding: 15px 0 0; font-weight: 600; text-transform: uppercase;">
+                            expires 06/28/25
+                        </td>
+                    </tr>
+                </table>
+                
+                <!-- CTA Button -->
+                <table align="center" cellpadding="0" cellspacing="0" border="0" class="responsive-table">
+                    <tr>
+                        <td align="center" style="padding: 0 0 35px;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="background-color: #1b375d; padding: 0;">
+                            <a href="#" target="_blank">
+                                <img src="assets/27f754655a7b1497627f030e9656a2f17d2ef9dc.gif" width="186" height="51" style="display: block;" border="0" alt="Shop Now" />
+                            </a>
+                        </td>
+                    </tr>
+                </table>
