--- a/welcome/janieandjack-welcome-email/index.html
+++ b/welcome/janieandjack-welcome-email/index.html
@@ -82,7 +82,7 @@
                                 <tr>
                                     <td align="right" style="padding: 0 0 0 9px;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/ef7138b270d6e134e34e49653ba5f8aa8cd95ef1.jpeg" width="10" height="13" style="display: block;" alt="Store locator" border="0" />
+                                            <img src="assets/stores-icon.jpeg" width="10" height="13" style="display: block;" alt="Store locator" border="0" />
                                         </a>
                                     </td>
                                     <td align="right" style="color: #63666a; font-family: Arial, sans-serif; font-size: 14px; padding: 0 10px 0 5px; white-space: nowrap;">
@@ -102,7 +102,7 @@
                                 <tr>
                                     <td align="center" style="padding: 0;">
                                         <a href="#" target="_blank">
-                                            <img alt="Janie and Jack" src="assets/e21b9838fa9b82105792219feaaeabd8b62f606c.jpeg" width="600" style="display: block; max-width: 100%; height: auto;" border="0" class="img-max" />
+                                            <img alt="Janie and Jack" src="assets/janie-jack-logo.jpeg" width="600" style="display: block; max-width: 100%; height: auto;" border="0" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
@@ -119,22 +119,22 @@
                                 <tr>
                                     <td align="center" style="width: 25%;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/6664b2893d1e79f2bb7e7fe5820d3ec2953c7f88.jpeg" alt="Girl" width="85" height="56" border="0" style="display: block;" />
+                                            <img src="assets/nav-girl.jpeg" alt="Girl" width="85" height="56" border="0" style="display: block;" />
                                         </a>
                                     </td>
                                     <td align="center" style="width: 25%;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/becfd0a9bdaddc5d7d0bacd18f22b48d7f939a17.jpeg" alt="Boy" width="88" height="56" border="0" style="display: block;" />
+                                            <img src="assets/nav-boy.jpeg" alt="Boy" width="88" height="56" border="0" style="display: block;" />
                                         </a>
                                     </td>
                                     <td align="center" style="width: 25%;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/dd8ce682f0f26a911143cdd918c3e8046466acc2.jpeg" alt="Newborn" width="140" height="56" border="0" style="display: block;" />
+                                            <img src="assets/nav-newborn.jpeg" alt="Newborn" width="140" height="56" border="0" style="display: block;" />
                                         </a>
                                     </td>
                                     <td align="center" style="width: 25%;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/3d224115f15afe122d9506479149d7240725ae17.jpeg" alt="Tween" width="103" height="56" border="0" style="display: block;" />
+                                            <img src="assets/nav-tween.jpeg" alt="Tween" width="103" height="56" border="0" style="display: block;" />
                                         </a>
                                     </td>
                                 </tr>
@@ -151,7 +151,7 @@
                                 <tr>
                                     <td style="padding: 0;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/1703d137d8ae0b8b50855cb718616ff0f54c1f62.jpeg" width="600" border="0" alt="Free shipping on orders $75+" style="display: block; max-width: 100%; height: auto;" class="img-max" />
+                                            <img src="assets/hero-free-shipping.jpeg" width="600" border="0" alt="Free shipping on orders $75+" style="display: block; max-width: 100%; height: auto;" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
@@ -168,7 +168,7 @@
                                 <tr>
                                     <td style="padding: 0 0 10px;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/59100e6e019f2e56607ce623cc4afdad137fa05e.jpeg" width="600" border="0" alt="Welcome to Janie and Jack" style="display: block; max-width: 100%; height: auto;" class="img-max" />
+                                            <img src="assets/hero-welcome-banner.jpeg" width="600" border="0" alt="Welcome to Janie and Jack" style="display: block; max-width: 100%; height: auto;" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
@@ -191,7 +191,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 15px 0 0;" align="center">
-                            <img src="assets/fdc6e24c3af1bd5775b5cacfda8ffb4a663b414e.gif" style="display: block; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 13px; width: 190px; height: 55px;" width="190" height="55" border="0" alt="10% off discount" />
+                            <img src="assets/discount-10-percent.gif" style="display: block; color: #666666; font-family: Helvetica, Arial, sans-serif; font-size: 13px; width: 190px; height: 55px;" width="190" height="55" border="0" alt="10% off discount" />
                         </td>
                     </tr>
                     <tr>
@@ -210,7 +210,7 @@
                     <tr>
                         <td align="center" style="background-color: #1b375d; padding: 0;">
                             <a href="#" target="_blank">
-                                <img src="assets/27f754655a7b1497627f030e9656a2f17d2ef9dc.gif" width="186" height="51" style="display: block;" border="0" alt="Shop Now" />
+                                <img src="assets/shop-now-button.gif" width="186" height="51" style="display: block;" border="0" alt="Shop Now" />
                             </a>
                         </td>
                     </tr>
@@ -224,7 +224,7 @@
                                 <tr>
                                     <td style="padding: 30px 0 10px;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/4754a4d7115864aea4679b747b427205e4e82d60.jpeg" width="600" border="0" alt="New arrivals collection" style="display: block; max-width: 100%; height: auto;" class="img-max" />
+                                            <img src="assets/promo-new-arrivals.jpeg" width="600" border="0" alt="New arrivals collection" style="display: block; max-width: 100%; height: auto;" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
@@ -241,7 +241,7 @@
                                 <tr>
                                     <td style="padding: 20px 0 10px;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/0af65216d7ebd796c54a7cc426f63704002e57c2.jpeg" width="600" border="0" alt="Featured products" style="display: block; max-width: 100%; height: auto;" class="img-max" />
+                                            <img src="assets/promo-featured-products.jpeg" width="600" border="0" alt="Featured products" style="display: block; max-width: 100%; height: auto;" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
@@ -258,7 +258,7 @@
                                 <tr>
                                     <td style="padding: 0 0 10px;">
                                         <a href="#" target="_blank">
-                                            <img src="assets/49ef4ea57da6b2a2d74ae404b4cec563f40d0c75.jpeg" width="600" border="0" alt="Latest trends" style="display: block; max-width: 100%; height: auto;" class="img-max" />
+                                            <img src="assets/promo-latest-trends.jpeg" width="600" border="0" alt="Latest trends" style="display: block; max-width: 100%; height: auto;" class="img-max" />
                                         </a>
                                     </td>
                                 </tr>
