Added mobile category navigation section

--- a/welcome/janieandjack-welcome-email/index.html
+++ b/welcome/janieandjack-welcome-email/index.html
@@ -266,3 +266,48 @@
                         </td>
                     </tr>
                 </table>
+                
+                <!-- Mobile Category Navigation (Hidden on Desktop) -->
+                <table border="0" cellpadding="0" cellspacing="0" width="600" align="center" style="width: 600px; display: none; width: 0; height: 0; overflow: hidden; visibility: hidden; border: none; max-height: 0px;" class="mobile-show">
+                    <tr>
+                        <td colspan="2">
+                            <img src="assets/mobile-this-just-in.jpeg" alt="This Just In" width="100%" style="display: block;" border="0" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 50%;">
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-girl.jpeg" alt="Girl" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                        <td style="width: 50%;">
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-boy.jpeg" alt="Boy" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-newborn-girl.jpeg" alt="Newborn Girl" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                        <td>
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-newborn-boy.jpeg" alt="Newborn Boy" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-accessories.jpeg" alt="Accessories" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                        <td>
+                            <a href="#" target="_blank">
+                                <img src="assets/mobile-sale.jpeg" alt="Sale" width="100%" style="display: block;" border="0" />
+                            </a>
+                        </td>
+                    </tr>
+                </table>
