Added store location header with address and contact information

--- a/onboarding/pizzahut-hut-rewards-onboarding/index.html
+++ b/onboarding/pizzahut-hut-rewards-onboarding/index.html
@@ -84,6 +84,33 @@
         <tr>
             <td align="center" style="mso-line-height-rule: exactly;">
                 
+                <!-- Store Location Header -->
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" style="background: #f2f2f2;">
+                    <tr>
+                        <td style="mso-line-height-rule: exactly; padding: 10px;" align="center">
+                            <table align="center" border="0" cellpadding="0" cellspacing="0" style="max-width: 95%;">
+                                <tr>
+                                    <td width="42" style="vertical-align: top;">
+                                        <img src="assets/location-pin-icon.png" alt="Store Location" width="42" height="42" style="display: block;" />
+                                    </td>
+                                    <td align="left" style="mso-line-height-rule: exactly; -webkit-text-size-adjust: none; line-height: 110%; vertical-align: top; padding-left: 10px;">
+                                        <span style="font-family: 'Open Sans', Arial, sans-serif; text-transform: uppercase; color: #000000; font-size: 12px; line-height: 16px;">
+                                            <strong>VALID AT:</strong> 264 West 23rd Street<br />
+                                            New York, NY 10011
+                                        </span>
+                                        <span style="font-family: 'Open Sans', Arial, sans-serif; color: #000000; font-size: 12px; line-height: 16px;">
+                                            | <a href="#" style="color: #ed1c24; text-decoration: none; text-transform: uppercase; font-weight: 600;">Not your store?</a>
+                                        </span><br />
+                                        <span style="font-family: 'Open Sans', Arial, sans-serif; color: #000000; font-size: 12px; line-height: 16px;">
+                                            (646) 532-6486
+                                        </span>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+                
                 <!-- Main Email Content Container -->
                 <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" class="main-table" style="background: #ffffff;">
                     <tr>
