Added Hut Rewards header with logo and points balance display

--- a/onboarding/pizzahut-hut-rewards-onboarding/index.html
+++ b/onboarding/pizzahut-hut-rewards-onboarding/index.html
@@ -111,6 +111,37 @@
                     </tr>
                 </table>
                 
+                <!-- Hut Rewards Header -->
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" style="background: #ffffff;">
+                    <tr>
+                        <td style="mso-line-height-rule: exactly; padding: 10px 0;">
+                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                <tr>
+                                    <!-- Hut Rewards Logo -->
+                                    <td width="50%" style="vertical-align: middle; mso-line-height-rule: exactly;">
+                                        <a href="#" style="display: block;">
+                                            <img src="assets/hut-rewards-logo.png" alt="Hut Rewards" width="320" height="80" style="display: block; max-width: 320px; width: 100%;" />
+                                        </a>
+                                    </td>
+                                    <!-- Points Balance -->
+                                    <td width="50%" align="right" style="padding: 1px 20px 0 0; vertical-align: middle; mso-line-height-rule: exactly;">
+                                        <div style="font-family: 'Open Sans', Arial, sans-serif; font-weight: bold; font-size: 16px; line-height: 18px;">
+                                            <span style="color: #000000;">Your point balance | </span>
+                                            <span style="color: #EC1E27;">0</span>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <!-- Progress Bar -->
+                                    <td width="100%" colspan="2">
+                                        <img src="assets/points-progress-bar.png" alt="Points Progress Bar" width="640" height="70" style="display: block; max-width: 640px; width: 100%;" />
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+                
                 <!-- Main Email Content Container -->
                 <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" class="main-table" style="background: #ffffff;">
                     <tr>
