Added footer navigation menu with brand-styled menu links

--- a/onboarding/pizzahut-hut-rewards-onboarding/index.html
+++ b/onboarding/pizzahut-hut-rewards-onboarding/index.html
@@ -239,6 +239,49 @@
                     </tr>
                 </table>
                 
+                <!-- Footer Navigation Menu -->
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" style="background: #ffffff;">
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="25" width="25" style="line-height: 25px; display: block;" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;" align="center">
+                            <table align="center" border="0" cellpadding="0" cellspacing="0" style="min-width: 296px; max-width: 640px;">
+                                <tr>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly;"></td>
+                                    <td width="13%" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" style="color: #ED1C24; text-decoration: underline; font-family: Arial, sans-serif; font-weight: 800; font-size: 14px;">PIZZA</a>
+                                    </td>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly; font-family: Arial, sans-serif; color: #000000;">|</td>
+                                    <td width="13%" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" style="color: #ED1C24; text-decoration: underline; font-family: Arial, sans-serif; font-weight: 800; font-size: 14px;">WINGS</a>
+                                    </td>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly; font-family: Arial, sans-serif; color: #000000;">|</td>
+                                    <td width="13%" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" style="color: #ED1C24; text-decoration: underline; font-family: Arial, sans-serif; font-weight: 800; font-size: 14px;">SIDES</a>
+                                    </td>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly; font-family: Arial, sans-serif; color: #000000;">|</td>
+                                    <td width="18%" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" style="color: #ED1C24; text-decoration: underline; font-family: Arial, sans-serif; font-weight: 800; font-size: 14px;">DESSERTS</a>
+                                    </td>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly; font-family: Arial, sans-serif; color: #000000;">|</td>
+                                    <td width="13%" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" style="color: #ED1C24; text-decoration: underline; font-family: Arial, sans-serif; font-weight: 800; font-size: 14px;">DEALS</a>
+                                    </td>
+                                    <td width="1%" align="center" style="mso-line-height-rule: exactly;"></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="22" width="25" style="line-height: 22px; display: block;" />
+                        </td>
+                    </tr>
+                </table>
+                
             </td>
         </tr>
     </table>
