--- a/onboarding/pizzahut-hut-rewards-onboarding/index.html
+++ b/onboarding/pizzahut-hut-rewards-onboarding/index.html
@@ -282,6 +282,36 @@
                     </tr>
                 </table>
                 
+                <!-- App Download Section -->
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" style="background: #ffffff;">
+                    <tr>
+                        <td align="center" style="mso-line-height-rule: exactly;">
+                            <img src="assets/pizza-hut-logo.png" alt="No One Out Pizzas The Hut" width="130" height="114" style="display: block;" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="22" width="25" style="line-height: 22px; display: block;" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center; padding-bottom: 10px; font-family: 'Open Sans', Arial, sans-serif; font-size: 22px; color: #000000; line-height: 24px;">
+                            ORDER YOUR FAVES IN A FLASH<br />
+                            WITH THE PIZZA HUT<sup style="font-size: 12px; vertical-align: 6px;">®</sup> APP.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="10" width="25" style="line-height: 10px; display: block;" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center" style="mso-line-height-rule: exactly;">
+                            <a href="#" style="color: #ED1C24; text-decoration: underline; font-size: 14px; font-family: Arial, sans-serif; font-weight: 700;">DOWNLOAD NOW</a>
+                        </td>
+                    </tr>
+                </table>
+                
             </td>
         </tr>
     </table>
