Added social media icons section with accessible alt text and cross-client layout

--- a/onboarding/pizzahut-hut-rewards-onboarding/index.html
+++ b/onboarding/pizzahut-hut-rewards-onboarding/index.html
@@ -312,6 +312,66 @@
                     </tr>
                 </table>
                 
+                <!-- Social Media Icons Section -->
+                <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" style="background: #ffffff;">
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="25" width="25" style="line-height: 25px; display: block;" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;" align="center">
+                            <table align="center" border="0" cellpadding="0" cellspacing="0" width="159" style="min-width: 159px; max-width: 200px;">
+                                <tr>
+                                    <!-- Facebook -->
+                                    <td width="36" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" target="_blank">
+                                            <img src="assets/social-facebook.png" alt="Follow Pizza Hut on Facebook" width="36" height="36" style="display: block;" />
+                                        </a>
+                                    </td>
+                                    <!-- Spacer -->
+                                    <td width="5" align="center" style="mso-line-height-rule: exactly;"> </td>
+                                    <!-- Twitter -->
+                                    <td width="36" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" target="_blank">
+                                            <img src="assets/social-twitter.png" alt="Follow Pizza Hut on Twitter" width="36" height="36" style="display: block;" />
+                                        </a>
+                                    </td>
+                                    <!-- Spacer -->
+                                    <td width="5" align="center" style="mso-line-height-rule: exactly;"> </td>
+                                    <!-- Instagram -->
+                                    <td width="36" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" target="_blank">
+                                            <img src="assets/social-instagram.png" alt="Follow Pizza Hut on Instagram" width="36" height="36" style="display: block;" />
+                                        </a>
+                                    </td>
+                                    <!-- Spacer -->
+                                    <td width="5" align="center" style="mso-line-height-rule: exactly;"> </td>
+                                    <!-- YouTube -->
+                                    <td width="36" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" target="_blank">
+                                            <img src="assets/social-youtube.png" alt="Subscribe to Pizza Hut on YouTube" width="36" height="36" style="display: block;" />
+                                        </a>
+                                    </td>
+                                    <!-- Spacer -->
+                                    <td width="5" align="center" style="mso-line-height-rule: exactly;"> </td>
+                                    <!-- TikTok -->
+                                    <td width="36" align="center" style="mso-line-height-rule: exactly;">
+                                        <a href="#" target="_blank">
+                                            <img src="assets/social-tiktok.png" alt="Follow Pizza Hut on TikTok" width="36" height="36" style="display: block;" />
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="mso-line-height-rule: exactly;">
+                            <img src="assets/spacer-pixel.gif" height="35" width="40" style="line-height: 35px; display: block;" />
+                        </td>
+                    </tr>
+                </table>
+                
             </td>
         </tr>
     </table>
