Added Spirit Airlines logo to assets folder and fixed HTML reference for proper logo display.

--- a/order-confirmation/spirit-airlines-itinerary/index.html
+++ b/order-confirmation/spirit-airlines-itinerary/index.html
@@ -767,7 +767,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="/Users/semajandrews/Downloads/Image from Google.png" alt="Spirit Airlines">
+                <img src="assets/spirit-logo.png" alt="Spirit Airlines">
             </div>
             <div class="nav-items">
                 <div>HOTEL</div>
